--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Raw Source of data, dna
 
+
+jump:
 chromospomes are defined via pattern matching
 
 all "choices" made by mutator, breeder and actor are expressions of chromosomes
@@ -7,3 +9,6 @@ all "choices" made by mutator, breeder and actor are expressions of chromosomes
 actor has two levels:
  1) dicisionless / nonvariable behavior / noise
  2) applied choices / decided behavior / suppression
+
+brain:
+genome defines a Neural Network
